--- a/data_user/ktp/.htaccess
+++ b/data_user/ktp/.htaccess
@@ -2,6 +2,7 @@ RewriteEngine On
 
 # Blokir akses langsung ke semua file dalam folder ktp
 RewriteCond %{REQUEST_URI} !^/check_ktp.php$ [NC]
+RewriteCond %{REQUEST_URI} !^/getUserKTP.php$ [NC]
 RewriteRule .* - [F]
 
 # Logging (jika didukung oleh server)
