--- a/data_user/pas_foto/.htaccess
+++ b/data_user/pas_foto/.htaccess
@@ -1,7 +1,8 @@
 RewriteEngine On
 
-# Blokir akses langsung ke semua file dalam folder ktp
+# Blokir akses langsung ke semua file dalam folder
 RewriteCond %{REQUEST_URI} !^/check_pas_foto.php$ [NC]
+RewriteCond %{REQUEST_URI} !^/ktpgetUserPasFoto.php$ [NC]
 RewriteRule .* - [F]
 
 # Logging (jika didukung oleh server)
